airflow/logs/dag_id=yandex-rates-test/run_id=manual__2023-02-04T071148.899866+0000/task_id=sql_sensor_check/attempt=3.log
[2023-02-04 07:26:39,663] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:11:48.899866+00:00 [queued]>
[2023-02-04 07:26:39,671] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:11:48.899866+00:00 [queued]>
[2023-02-04 07:26:39,672] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:26:39,673] {taskinstance.py:1377} INFO - Starting attempt 3 of 3
[2023-02-04 07:26:39,673] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:26:39,686] {taskinstance.py:1397} INFO - Executing <Task(SqlSensor): sql_sensor_check> on 2023-02-04 07:11:48.899866+00:00
[2023-02-04 07:26:39,690] {standard_task_runner.py:52} INFO - Started process 5690 to run task
[2023-02-04 07:26:39,692] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'yandex-rates-test', 'sql_sensor_check', 'manual__2023-02-04T07:11:48.899866+00:00', '--job-id', '120', '--raw', '--subdir', 'DAGS_FOLDER/yandex_dag_test.py', '--cfg-path', '/tmp/tmpvl_aib6_', '--error-file', '/tmp/tmponklxd3t']
[2023-02-04 07:26:39,693] {standard_task_runner.py:80} INFO - Job 120: Subtask sql_sensor_check
[2023-02-04 07:26:39,747] {task_command.py:371} INFO - Running <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:11:48.899866+00:00 [running]> on host 39df186e1726
[2023-02-04 07:26:39,806] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=yandex-rates-test
AIRFLOW_CTX_TASK_ID=sql_sensor_check
AIRFLOW_CTX_EXECUTION_DATE=2023-02-04T07:11:48.899866+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-02-04T07:11:48.899866+00:00
[2023-02-04 07:26:39,814] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:26:39,853] {sql.py:92} INFO - Poking: select * from rates where ingest_datetime > 2023-02-04 07:25:43 (with parameters None)
[2023-02-04 07:26:39,859] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:26:39,875] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/base.py", line 277, in execute
    poke_return = self.poke(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/sql.py", line 93, in poke
    records = hook.get_records(self.sql, self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 162, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^

[2023-02-04 07:26:39,883] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=yandex-rates-test, task_id=sql_sensor_check, execution_date=20230204T071148, start_date=20230204T072639, end_date=20230204T072639
[2023-02-04 07:26:39,893] {standard_task_runner.py:97} ERROR - Failed to execute job 120 for task sql_sensor_check (syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^
; 5690)
[2023-02-04 07:26:40,026] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-02-04 07:26:40,069] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
